tests/negative/typecheck/inject-non-sum.orng
fn main() -> Int {
    4 <- 4
}